# RPCSimulation

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/RPC/: CMakeLists.txt  RPC.cpp
examples/RPC_v6/: CMakeLists.txt  Weight.C  Weight.cpp
examples/RPC_v6/data/: c2h2f4_94-7_iso_5_sf6_0-3_bis.gas
examples/TGeom/: CMakeLists.txt  TGeom.cpp
examples/Toy/: CMakeLists.txt  Toy.cpp
include/RPCSim/: Dimensions.hpp  Exceptions.hpp  GasMixture.hpp  Medium.hpp  PCBGeometry.hpp  RPCGeometry.hpp  Setup.hpp  SignalPlotter.hpp  Webserver.hpp  Websocket.hpp
include/RPCSim/new/: GasMixture.hpp  WebServer.hpp
src/: CMakeLists.txt  DefaultFolders.hpp.in  Exceptions.cpp  GasMixture.cpp  Medium.cpp  PCBGeometry.cpp  RPCGeometry.cpp  SignalPlotter.cpp  Webserver.cpp  Websocket.cpp
src/new/: GasMixture.cpp  WebServer.cpp
